--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,4 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap");
